Final Commit: 28 June 2018

--- a/Week2Module1/Styles/Site.css
+++ b/Week2Module1/Styles/Site.css
@@ -372,3 +372,17 @@ div.accountInfo
     border-radius: 5px;
     overflow: auto; 
 }
+
+.options
+{
+    padding: 6px;
+    height: 32px;
+    width: 32px;
+    border-radius: 16px;
+}
+
+.driveOptions
+{
+    padding: 3px;
+    overflow: auto;
+}
