Final Commit: 29 June 2017
Directory and Path handlers integrated

--- a/Week2Module1/Styles/Site.css
+++ b/Week2Module1/Styles/Site.css
@@ -386,3 +386,15 @@ div.accountInfo
     padding: 3px;
     overflow: auto;
 }
+
+button.folder
+{
+    border: none;
+    width: 100px;
+}
+
+button.file
+{
+    border: none;
+    width: 100px;
+}
